# fteqw

./: .gitignore  AppxManifest.xml  CMakeLists.txt  CMakePresets.json  FTEQWDev.FTEQuake.yaml  README.txt  YourName.FTEQuake.yaml  YourName.FTEQuakeEngine.yaml  build_setup.sh  qloak.FTEQuakeEngine.yaml  system32_hits.csv
PackageLayout/: AppxManifest.xml  Package.appxmanifest  cod.exp  cod.lib  conhistory.txt  ezhud.exp  ezhud.lib  fteqw.exp  fteqw.lib  hl2.exp  hl2.lib  irc.exp  irc.lib  models.exp  models.lib  qi.exp  qi.lib  xmpp.exp  xmpp.lib
PackageLayout/AppData/LocalState/games/: installed.lst
PackageLayout/AppData/LocalState/games/freehl/: autoexec.cfg
cmake/toolchains/: uwp.cmake
cmake/uwp/: AppxManifest.template.xml
docs/: UWP.md
engine/: Makefile  Makefile.uwp
engine/client/: cl_main.c  snd_mem.c  sys_win.c  sys_win_common.cpp  sys_win_common.h  sys_winrt.cpp  sys_winrt_app.cpp  winquake.aps
engine/common/: fs.h  fs_pak.c  fs_stdio.c  net_winrt.cpp  pr_common.h  sys_winrt_threads.cpp
engine/d3d/: vid_d3d11.c
engine/http/: httpclient.c
engine/qclib/: packager.c  qcc_pr_comp.c  qcc_pr_lex.c
fteqtv/: qw.c  relay.c
plugins/cod/: codbsp.c
plugins/hl2/: img_tth.c
plugins/quake3/: svq3_game.c
